# parakeet-stt-server

./: .dockerignore  .env.parakeet-stt.example  .gitignore  README.md  docker-compose.parakeet-stt.yml  openai_test.py  pyproject.toml
docker/parakeet-openai-stt/: Dockerfile
docs/: DOCKER.md  OPENAI_STT_SERVER.md
src/parakeet_stt/server/: __init__.py  api.py  engine.py  errors.py  formatting.py  schemas.py  settings.py
tests/: test_api.py  test_engine.py
