[project]
name = "parakeet-stt-server"
version = "0.1.0"
description = "OpenAI-compatible speech-to-text server for NVIDIA Parakeet."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "python-multipart>=0.0.12",
    "soundfile>=0.12.1",
    "uvicorn[standard]>=0.30.0",
]
nemo = [
    "nemo_toolkit[asr]>=2.4.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
]

[project.scripts]
parakeet-stt-server = "parakeet_stt.server.api:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

